# Data-Platform-Build

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  README.md  cloudbuild.yaml  cloudbuild_databricks.yaml  cloudbuild_fivetran.yaml  databricks.yml  release.sh
dbt/: .gitignore  DATA_GOVERNANCE.md  GOVERNANCE_HEALTH_CHECK.sql  cloudbuild_dbt.yaml  dbt_project.yml  dependencies.yml  package-lock.yml  pyproject.toml
dbt/environments/dev/: profiles.yml
dbt/environments/prod/: profiles.yml
dbt/macros/: apply_databricks_column_tags.sql  deploy_catalog_level_policy.sql  deploy_masking_functions.sql  generate_column_tags.sql  get_known_groups.sql  validate_governance_prerequisites.sql
dbt/models/ai_chats/admin_backend/public/: stg__admin_backend_alembic_version.sql  stg__biomarker.sql  stg__biomarker_reflex.sql  stg__biomarker_result.sql  stg__category.sql  stg__category_biomarker.sql  stg__cause.sql  stg__covid.sql  stg__critical.sql  stg__critical_result.sql  stg__disease.sql  stg__female_reproductive_health.sql  stg__medical_hx.sql  stg__package.sql  stg__package_panel.sql  stg__panel_group.sql  stg__panel_group_panel.sql  stg__patient_contact_info.sql  stg__physician_note_ledger.sql  stg__physician_note_record.sql  stg__prior_pregnancy.sql  stg__recommendation.sql  stg__recommendation_cause.sql  stg__recommendation_food_to_avoid.sql  stg__recommendation_food_to_eat.sql  stg__recommendation_panel.sql  stg__recommendation_selfcare.sql  stg__recommendation_supplement.sql  stg__recommendation_symptom.sql  stg__requisition.sql  stg__requisition_group.sql  stg__result.sql  (+4 more)
(+209 files in other folders)
