[project]
name = "demo-dbt"
version = "0.1.0"
description = ""
authors = [
    {name = "Zack Shapiro",email = "zack.shapiro@functionhealth.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "dbt-core (>=1.10.3,<2.0.0)",
    "dbt-databricks (>=1.10.4,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
